--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,8 @@ body {
 header {
   border: 1px solid black;
   background-color: black;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
 }
 
 .janvi {
@@ -66,4 +67,39 @@ header {
   .name {
     font-size: 4rem;
   }
+}
+
+.about {
+  background-color: var(--pink);
+  height: 100vh;
+  overflow: auto;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.about > h1 {
+  font-family: "Text Me One", sans-serif;
+  margin: 10px 0px;
+}
+
+.about > img {
+  border-radius: 45%;
+  border: 0.5rem solid white;
+}
+
+.introduction {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  width: 80%;
+  font-weight: 100;
+  letter-spacing: 0.2rem;
+}
+
+.Icode {
+  font-family: "La Belle Aurore", cursive;
+  font-size: 5rem;
 }
