--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
 header {
   border: 1px solid black;
   background-color: black;
-  height: 100vh;
+  height: 110vh;
   overflow: auto;
 }
 
@@ -132,6 +132,7 @@ header {
 
 .icons > li > h3 {
   letter-spacing: normal;
+  font-size: 2.5rem;
 }
 
 #contact,
