--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,12 @@ header {
   font-weight: 500;
 }
 
+@media (max-width: 767px) {
+  .icons > li {
+    width: 100%;
+  }
+}
+
 .icons > li > h3 {
   letter-spacing: normal;
   font-size: 2.5rem;
@@ -175,6 +181,7 @@ h3 {
   color: white;
   text-align: center;
   height: 100vh;
+  overflow: auto;
 }
 
 #projects > h1 {
@@ -185,6 +192,13 @@ h3 {
 .project-content {
   width: 60%;
   align-items: center;
+}
+
+@media (max-width: 767px) {
+  .project-content {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
 
 .project-title {
